grammar.js
        source_file: ($) => repeat($._definition),

        mathematical_operators: ($) =>
            choice("+", "-", "*", "/", $.mathematical_operators_mod_keyword),
        relational_operators: ($) => choice("=", "<>", "<", ">", "<=", ">="),
        operators_used_in_statements: ($) =>
            choice($.mathematical_operators, $.bit_operators),
        operators_used_in_conditionals: ($) =>
            choice($.relational_operators, $.logical_operators),

        comment: ($) =>
            token(
                choice(
                    seq("//", /.*/),
                    seq("!", /.*/),
                    token(seq(/(\/\*[^\*])/, /[^*]*\*+([^\/*][^*]*\*+)*/, "/")), // this is janky as HELL
                    "/**/", // this is even more janky
                ),
            ),

        _definition: ($) =>
            choice(
                $.a_function,
                $.xml_non_function_docstring,
                $.variable_declaration,
                $.array_declaration, // cannot be inside of function body - at least, i dont think a module declaration inside of a function would work? idk, should test it sometime
            ),

        function_end: ($) => token("END"),

        a_function: ($) =>
            seq(
                optional($.xml_function_docstring),
                $.function_definition,
                optional(repeat($.variable_declaration)),
                optional(repeat($.statement)),
                optional($.return_statment),
                $.function_end,
            ),
        function_scope_private_keyword: ($) => token("PRIVATE"),

        function_scope: ($) =>
            choice(
                $.function_scope_public_keyword,
                $.function_scope_private_keyword,
            ),
        _int_keyword: (_) => token("INT"),
        _string_keyword: (_) => token("STRING"),
        _real_keyword: (_) => token("REAL"),
        _quality_keyword: (_) => token("QUALITY"),
        _timestamp_keyword: (_) => token("TIMESTAMP"),
        _bool_keyword: (_) => token("BOOL"),
        _object_keyword: (_) => token("OBJECT"),
        _long_keyword: (_) => token("LONG"),
        _void_keyword: (_) => token("VOID"),

        type: ($) =>
            choice(
                $._int_keyword,
                $._string_keyword,
                $._real_keyword,
                $._quality_keyword,
                $._timestamp_keyword,
                $._bool_keyword,
                $._object_keyword,
                $._long_keyword, // IDK, their docs dont mention it iirc, but their examples do
                $._void_keyword, // Only valid for functions, but eh
            ),

        number: ($) => prec(2, /(\d+(?:\.\d+)?)/),

        string_contents: ($) => repeat1(choice(/[^\^"]/, /\^./)),

        punctuation_quotation_mark: ($) => token('"'),
        punctuation_semicolon: ($) => token(";"), // somehow having the optional whitespace speeds up the parser?
        punctuation_comma: ($) => token(","),
        punctuation_bracket_open: ($) => token("("),
        punctuation_bracket_close: ($) => token(")"),
        punctuation_equals_sign: ($) => token(seq("=", optional(""))),
        punctuation_colon: ($) => token(":"),

        string: ($) =>
            seq(
                $.punctuation_quotation_mark,
                optional($.string_contents),
                $.punctuation_quotation_mark,
            ),

        default_value: ($) =>
            seq(
                field("default_value_equals_sign", $.punctuation_equals_sign),
                choice(
                    $.number,
                    $.string,
                    $.array_variable,
                    $.identifier,
                    $.format_specifier_variable,
                    $.negative_number,
                ),
            ),

        assign_to_value: ($) =>
            seq(
                field("assign_to_value_equals_sign", $.punctuation_equals_sign),
                $.expression_,
                optional($.format_specifier),
            ),

        function_parameter: ($) =>
            seq(
                field("parameter_type", $.type),
                field(
                    "parameter_name",
                    choice(
                        $.identifier,
                        $.format_specifier_variable,
                        $.array_variable,
                    ),
                ) /*
          I don’t think cicode has any rules about what a variable name can be, except for, and I quote:
          "The first 32 characters of a variable name needs to be unique." - https://docs.aveva.com/bundle/plant-scada/page/1130531.html
          That is not going to be implemented here.
        */,
                optional(field("defaultval", $.default_value)),
            ),
        // Note that you cannot use default values infront of normal values, at some point I should fix that but eh

        function_parameters: ($) =>
            seq(
                $.function_parameter,
                optional(
                    repeat(seq($.punctuation_comma, $.function_parameter)),
                ),
            ),

        identifier: ($) => /[0-9A-Za-z_]+/,
        function_keyword: ($) => token("FUNCTION"),
        function_definition: ($) =>
            seq(
                field("scope", optional($.function_scope)),
                field("return_type", optional($.type)),
                $.function_keyword,
                field("function_name", $.identifier),
                field(
                    "function_definition_bracket_open",
                    $.punctuation_bracket_open,
                ),
                field("parameters", optional($.function_parameters)),
                field(
                    "function_definition_bracket_close",
                    $.punctuation_bracket_close,
                ),
                "\n",
            ),
        array_variable: ($) =>
            seq(field("variable", $.identifier), $.array_brackets_index),

        format_specifier_variable: ($) =>
            prec(1, seq(field("variable", $.identifier), $.format_specifier)),

        array_brackets_index: ($) =>
            repeat1(
                seq(
                    $.punctuation_square_bracket_open,
                    field("array_dimension_size", $.expression_atom),
                    $.punctuation_square_bracket_close,
                ),
            ),

        expression_in_brackets: ($) =>
            seq(
                field("expression_open_brackets", $.punctuation_bracket_open),
                $.expression_,
                field("expression_close_brackets", $.punctuation_bracket_close),
            ),
        unary_minus_negation_symbol: ($) => "-",
        unary_minus_expression_atom: ($) =>
            prec.right(
                2,
                seq($.unary_minus_negation_symbol, $.expression_atom),
            ), // unary minus

        expression_atom: ($) =>
            choice(
                field("variable", $.identifier),
                $.string,
                $.number,
                $.format_specifier_variable,
                $.array_variable,
                $.expression_in_brackets,
                $.unary_minus_expression_atom,
                $.function_call,
            ),

        expression: ($) =>
            prec.left(
                2,
                seq(
                    $.expression_,
                    $.operators_used_in_statements,
                    $.expression_,
                ),
            ),

        expression_: ($) =>
            prec.left(2, choice($.expression_atom, $.expression)),

        statement: ($) =>
            choice(
                $.for_loop,
                $.while_loop,

                field("if_statement", $.if_statement),
                field("select_case", $.select_case_statement),
                $.variable_declaration, // remove this from here if variable declerations must happen before statements
                $.variable_assignment,
                $.statement_function_call,
            ),

        variable_assignment: ($) =>
            seq(
                field("variable", $.identifier),
                optional(field("array_dimensions", $.array_brackets_index)),
                $.assign_to_value,
                field("closing_semicolon", $.punctuation_semicolon),
            ),

        format_specifier_hash: ($) => "#",
        format_specifier_justification: ($) => "-",
        format_specifier_decimal_notation: ($) => ".",
        format_specifier_engineering_units: ($) => /[A-Za-z]+/,
        format_specifier: ($) =>
            prec.right(
                seq(
                    $.punctuation_colon,
                    choice(
                        $.format_specifier_shortform_notation,
                        repeat1($.format_specifier_specifier),
                    ),
                ),
            ),
        format_specifier_shortform_number: ($) => /[0-9]+/,

        format_specifier_shortform_notation: ($) =>
            seq(
                repeat1(
                    choice(
                        $.format_specifier_shortform_number,
                        $.format_specifier_engineering_units,
                        $.format_specifier_exponential_notation,
                    ),
                ),
                optional(
                    seq(
                        $.format_specifier_decimal_notation,
                        repeat(
                            choice(
                                $.format_specifier_shortform_number,
                                $.format_specifier_engineering_units,
                                $.format_specifier_exponential_notation,
                            ),
                        ),
                    ),
                ),
            ),
        statement_function_call: ($) =>
            seq(
                $.function_call,
                field("closing_semicolon", $.punctuation_semicolon),
            ),
        function_call: ($) =>
            seq(
                field("function_name", $.identifier),
                field("function_call_bracket_open", $.punctuation_bracket_open),
                optional(field("function_parameter", $.expression_)),
                repeat(
                    seq(
                        $.punctuation_comma,
                        field("function_parameter", $.expression_),
                    ),
                ),
                field(
                    "function_call_bracket_close",
                    $.punctuation_bracket_close,
                ),
            ),

        conditional_atom: ($) =>
            choice(
                $.expression_atom,
                $.expression,
                // $.identifier,
                //     $.number,
                //     $.negative_number,
                //     $.string,
                //     $.array_variable,
                $.conditional_expression_in_brackets,
                $.unary_not_conditional_atom,
                // $.function_call,
            ),

        conditional_expression: ($) =>
            choice(
                $.conditional_atom,
                prec.left(
                    1,
                    seq(
                        $.conditional_expression,
                        $.operators_used_in_conditionals,
                        $.conditional_expression,
                    ),
                ),
            ),
        if_statement_if_keyword: ($) => token("IF"),
        if_statement_then_keyword: ($) => token("THEN"),
        if_statement_else_keyword: ($) => token("ELSE"),
        if_statement_end_keyword: ($) => token("END"), // idk for some reason this was needed to get END as a token and not as string

        if_statement: ($) =>
            seq(
                $.if_statement_if_keyword,
                $.conditional_expression,
                $.if_statement_then_keyword,
                repeat($.statement),
                optional($.return_statment),
                optional(
                    seq(
                        $.if_statement_else_keyword,
                        repeat($.statement),
                        optional($.return_statment),
                    ),
                ),
                $.if_statement_end_keyword,
            ),
        to_statement_to_keyword: ($) => token("TO"),
        to_statement: ($) =>
            seq(
                $.expression_atom,
                $.to_statement_to_keyword,
                $.expression_atom,
            ),

        case_expression: ($) =>
            choice(
                $.expression_atom,
                $.to_statement,
                $.select_case_conditional_expression,
            ),

        select_case_is_keyword: ($) => token("IS"),
        select_case_conditional_expression: ($) =>
            seq(
                $.select_case_is_keyword,
                $.operators_used_in_conditionals,
                $.conditional_expression,
            ),

        select_case_select_case_keyword: ($) => token("SELECT CASE"),
        select_case_end_select_keyword: ($) => token("END SELECT"),
        select_case_statement: ($) =>
            seq(
                $.select_case_select_case_keyword,
                $.conditional_expression,
                repeat(seq(field("case", $.case_statement))),
                optional(field("case_else", $.case_else_statement)),
                $.select_case_end_select_keyword,
            ),

        return_keyword: ($) => token("RETURN"),
        return_statment: ($) =>
            seq(
                $.return_keyword,
                optional($.expression_),
                field("closing_semicolon", $.punctuation_semicolon),
            ),
        case_statement_case_keyword: ($) => token("CASE"),
        case_statement: ($) =>
            seq(
                $.case_statement_case_keyword,
                seq(
                    $.case_expression,
                    repeat(seq($.punctuation_comma, $.case_expression)),
                ),
                seq(repeat($.statement), optional($.return_statment)),
            ),
        case_statement_case_else_keyword: ($) => token("CASE ELSE"),
        case_else_statement: ($) =>
            seq(
                $.case_statement_case_else_keyword,
                optional($.statement),
                optional($.return_statment),
            ),
        /****************************************
         *              Loops                   *
         *                                      *
         ***************************************/
        for_loop_for_keyword: ($) => token("FOR"),
        for_loop_do_keyword: ($) => token("DO"),
        for_loop_end_keyword: ($) => token("END"),

        for_loop_iterable: ($) =>
            seq(
                field("for_loop_variable", $.identifier),
                $.assign_to_value,
                $.to_statement_to_keyword,
                $.expression_,
            ),

        for_loop: ($) =>
            seq(
                $.for_loop_for_keyword,
                $.for_loop_iterable,
                $.for_loop_do_keyword,
                repeat1($.statement),
                $.for_loop_end_keyword,
            ),

        while_loop_while_keyword: ($) => token("WHILE"),
        while_loop_do_keyword: ($) => token("DO"),
        while_loop_end_keyword: ($) => token("END"),
        while_loop: ($) =>
            seq(
                $.while_loop_while_keyword,
                $.conditional_expression,
                $.while_loop_do_keyword,
                repeat1($.statement),
                $.while_loop_end_keyword,
            ),

        /*********************************************************
         *              Doxygen XML Docstrings                   *
         *                                                       *
         *********************************************************/
