test/corpus/full_example_code.txt
===================
Large Example Code
===================
/**
<summary>
Adds a boat to the boat manifest
</summary>
<param name="BoatID">Boat ID number</param>
<param name="BoatName">Name of boat</param>
<returns>
0 for success, otherwise error code (either -1 for incorrect ID number, or MapValueSet error code)
</returns>
**/
PRIVATE INT FUNCTION AddBoatToManifest(INT BoatID, STRING BoatName = "My default boat name ")
    /*
    NOTE: There may be some underlying flaw here, I wrote this at 2AM
    */
    INT incrementValue;
    STRING val1, val2;

    INT counter = incrementValue;

    counter = "a" + 2;
    Counter = (2 + incrementValue)/3;
    IF counter > 0 THEN
        incrementValue = 1;
        IF checkIfBoatIsCoastGuards(BoatID) THEN
            val1 =  MapValueSet(ManifestOfBoats, IntToStr(BoatID), BoatName); // All Coast Guard boat ID’s already exist in manifest, but update the name
            RETURN val1;
        ELSE
            IF MapKeyExists(ManifestOfBoats, BoatID) THEN
                RETURN -1;      // Couldn’t add boat, ID already exists
            ELSE
                RETURN MapValueSet(ManifestOfBoats, IntToStr(BoatID), BoatName);
            END

        END
    END

    SELECT CASE BoatID
        CASE 1
            functionCall();
        CASE 0 TO 9             // BoatID’s cannot be single digits
            RETURN -1;
        CASE 11,12              // These are reserved by the Coast Guard
            IF checkIfBoatIsCoastGuards(BoatID) THEN
                StringVar=IntVar:3.2;
                RETURN MapValueSet(ManifestOfBoats, IntToStr(BoatID), BoatName); // All Coast Guard boat ID’s already exist in manifest, but update the name
            ELSE
                StringVar=IntVar:#0-###.##EU;
                RETURN -1;
            END
        CASE 1 TO 4, 7 TO 9, 11, 13, IS > MaxNumber

        CASE ELSE
            IF MapKeyExists(ManifestOfBoats + 1, BoatID) THEN
                RETURN -1;      // Couldn’t add boat, ID already exists
            ELSE
                RETURN MapValueSet(ManifestOfBoats, IntToStr(BoatID), BoatName);
            END
    END SELECT

    FOR counter = 0 TO 4 DO
        Prompt(ArrayA[counter]);
        Prompt(ArrayA);

        Sleep(15);
    END
    WHILE counter > 0 DO
        Prompt(ArrayA[counter]);
    END
END

---

(source_file
  (a_function
    (xml_function_docstring
      (delimited_comment_doxygen_xml_opening)
      (xml_docstring_contents
        (doxygen_summary_xml_tag
          (doxygen_summary_xml_open_tag)
          (doxygen_summary_content)
          (doxygen_summary_xml_close_tag))
        (doxygen_param_xml_tag
          (doxygen_param_xml_open_tag)
          (doxygen_xml_name_attribute
            (doxygen_xml_name_attribute_name_keyword)
            (punctuation_equals_sign)
            (punctuation_quotation_mark)
            (identifier)
            (punctuation_quotation_mark))
          (doxygen_param_xml_close_opening_tag)
          (doxygen_param_content)
          (doxygen_param_xml_close_tag))
        (doxygen_param_xml_tag
          (doxygen_param_xml_open_tag)
          (doxygen_xml_name_attribute
            (doxygen_xml_name_attribute_name_keyword)
            (punctuation_equals_sign)
            (punctuation_quotation_mark)
            (identifier)
            (punctuation_quotation_mark))
          (doxygen_param_xml_close_opening_tag)
          (doxygen_param_content)
          (doxygen_param_xml_close_tag))
        (doxygen_returns_xml_tag
          (doxygen_returns_xml_open_tag)
          (doxygen_returns_content)
          (doxygen_returns_xml_close_tag)))
      (delimited_comment_doxygen_xml_closing))
    (function_definition
      (function_scope
        (function_scope_private_keyword))
      (type)
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (function_parameters
        (function_parameter
          (type)
          (identifier))
        (punctuation_comma)
        (function_parameter
          (type)
          (identifier)
          (default_value
            (punctuation_equals_sign)
            (string
              (punctuation_quotation_mark)
              (string_contents)
              (punctuation_quotation_mark)))))
      (punctuation_bracket_close))
    (comment)
    (statement
      (variable_declaration
        (type)
        (identifier)
        (punctuation_semicolon)))
    (statement
      (variable_declaration
        (type)
        (identifier)
        (punctuation_comma)
        (identifier)
        (punctuation_semicolon)))
    (statement
      (variable_declaration
        (type)
        (identifier)
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression_atom
              (identifier))))
        (punctuation_semicolon)))
    (statement
      (variable_assignment
        (identifier)
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression
              (expression_
                (expression_atom
                  (string
                    (punctuation_quotation_mark)
                    (string_contents)
                    (punctuation_quotation_mark))))
              (operators_used_in_statements
                (mathematical_operators))
              (expression_
                (expression_atom
                  (number))))))
        (punctuation_semicolon)))
    (statement
      (variable_assignment
        (identifier)
        (assign_to_value
          (punctuation_equals_sign)
          (expression_
            (expression
              (expression_
                (expression_atom
                  (expression_in_brackets
                    (punctuation_bracket_open)
                    (expression_
                      (expression
                        (expression_
                          (expression_atom
                            (number)))
                        (operators_used_in_statements
                          (mathematical_operators))
                        (expression_
                          (expression_atom
                            (identifier)))))
                    (punctuation_bracket_close))))
              (operators_used_in_statements
                (mathematical_operators))
              (expression_
                (expression_atom
                  (number))))))
        (punctuation_semicolon)))
    (statement
      (if_statement
        (if_statement_if_keyword)
        (conditional_expression
          (conditional_expression
            (conditional_atom
              (expression_atom
                (identifier))))
          (operators_used_in_conditionals
            (relational_operators))
          (conditional_expression
            (conditional_atom
              (expression_atom
                (number)))))
        (if_statement_then_keyword)
        (statement
          (variable_assignment
            (identifier)
            (assign_to_value
              (punctuation_equals_sign)
              (expression_
                (expression_atom
                  (number))))
            (punctuation_semicolon)))
        (statement
          (if_statement
            (if_statement_if_keyword)
            (conditional_expression
              (conditional_atom
                (expression_atom
                  (function_call
                    (identifier)
                    (punctuation_bracket_open)
                    (expression_
                      (expression_atom
                        (identifier)))
                    (punctuation_bracket_close)))))
            (if_statement_then_keyword)
            (statement
              (variable_assignment
                (identifier)
                (assign_to_value
                  (punctuation_equals_sign)
                  (expression_
                    (expression_atom
                      (function_call
                        (identifier)
                        (punctuation_bracket_open)
                        (expression_
                          (expression_atom
                            (identifier)))
                        (punctuation_comma)
                        (expression_
                          (expression_atom
                            (function_call
                              (identifier)
                              (punctuation_bracket_open)
                              (expression_
                                (expression_atom
                                  (identifier)))
                              (punctuation_bracket_close))))
                        (punctuation_comma)
                        (expression_
                          (expression_atom
                            (identifier)))
                        (punctuation_bracket_close)))))
                (punctuation_semicolon)))
            (comment)
            (return_statment
              (return_keyword)
              (expression_
                (expression_atom
                  (identifier)))
              (punctuation_semicolon))
            (if_statement_else_keyword)
            (statement
              (if_statement
                (if_statement_if_keyword)
                (conditional_expression
                  (conditional_atom
                    (expression_atom
                      (function_call
                        (identifier)
                        (punctuation_bracket_open)
                        (expression_
                          (expression_atom
                            (identifier)))
                        (punctuation_comma)
                        (expression_
                          (expression_atom
                            (identifier)))
                        (punctuation_bracket_close)))))
                (if_statement_then_keyword)
                (return_statment
                  (return_keyword)
                  (expression_
                    (expression_atom
                      (unary_minus_expression_atom
                        (unary_minus_negation_symbol)
                        (expression_atom
                          (number)))))
                  (punctuation_semicolon))
                (comment)
                (if_statement_else_keyword)
                (return_statment
                  (return_keyword)
                  (expression_
                    (expression_atom
                      (function_call
                        (identifier)
                        (punctuation_bracket_open)
                        (expression_
                          (expression_atom
                            (identifier)))
                        (punctuation_comma)
                        (expression_
                          (expression_atom
                            (function_call
                              (identifier)
                              (punctuation_bracket_open)
                              (expression_
                                (expression_atom
                                  (identifier)))
                              (punctuation_bracket_close))))
                        (punctuation_comma)
                        (expression_
                          (expression_atom
                            (identifier)))
                        (punctuation_bracket_close))))
                  (punctuation_semicolon))
                (if_statement_end_keyword)))
            (if_statement_end_keyword)))
        (if_statement_end_keyword)))
    (statement
      (select_case_statement
        (select_case_select_case_keyword)
        (conditional_expression
          (conditional_atom
            (expression_atom
              (identifier))))
        (case_statement
          (case_statement_case_keyword)
          (case_expression
            (expression_atom
              (number)))
          (statement
            (statement_function_call
              (function_call
                (identifier)
                (punctuation_bracket_open)
                (punctuation_bracket_close))
              (punctuation_semicolon))))
        (case_statement
          (case_statement_case_keyword)
          (case_expression
            (to_statement
              (expression_atom
                (number))
              (to_statement_to_keyword)
              (expression_atom
                (number))))
          (comment)
          (return_statment
            (return_keyword)
            (expression_
              (expression_atom
                (unary_minus_expression_atom
                  (unary_minus_negation_symbol)
                  (expression_atom
                    (number)))))
            (punctuation_semicolon)))
        (case_statement
          (case_statement_case_keyword)
          (case_expression
            (expression_atom
              (number)))
          (punctuation_comma)
          (case_expression
            (expression_atom
              (number)))
          (comment)
          (statement
            (if_statement
              (if_statement_if_keyword)
              (conditional_expression
                (conditional_atom
                  (expression_atom
                    (function_call
                      (identifier)
                      (punctuation_bracket_open)
                      (expression_
                        (expression_atom
                          (identifier)))
                      (punctuation_bracket_close)))))
              (if_statement_then_keyword)
              (statement
                (variable_assignment
                  (identifier)
                  (assign_to_value
                    (punctuation_equals_sign)
                    (expression_
                      (expression_atom
                        (format_specifier_variable
                          (identifier)
                          (format_specifier
                            (punctuation_colon)
                            (format_specifier_shortform_notation
                              (format_specifier_shortform_number)
                              (format_specifier_decimal_notation)
                              (format_specifier_shortform_number)))))))
                  (punctuation_semicolon)))
              (return_statment
                (return_keyword)
                (expression_
                  (expression_atom
                    (function_call
                      (identifier)
                      (punctuation_bracket_open)
                      (expression_
                        (expression_atom
                          (identifier)))
                      (punctuation_comma)
                      (expression_
                        (expression_atom
                          (function_call
                            (identifier)
                            (punctuation_bracket_open)
                            (expression_
                              (expression_atom
                                (identifier)))
                            (punctuation_bracket_close))))
                      (punctuation_comma)
                      (expression_
                        (expression_atom
                          (identifier)))
                      (punctuation_bracket_close))))
                (punctuation_semicolon))
              (comment)
              (if_statement_else_keyword)
              (statement
                (variable_assignment
                  (identifier)
                  (assign_to_value
                    (punctuation_equals_sign)
                    (expression_
                      (expression_atom
                        (format_specifier_variable
                          (identifier)
                          (format_specifier
                            (punctuation_colon)
                            (format_specifier_hash)
                            (format_specifier_justification)
                            (format_specifier_hash)
                            (format_specifier_hash)
                            (format_specifier_hash)
                            (format_specifier_decimal_notation)
                            (format_specifier_hash)
                            (format_specifier_hash)
                            (format_specifier_engineering_units))))))
                  (punctuation_semicolon)))
              (return_statment
                (return_keyword)
                (expression_
                  (expression_atom
                    (unary_minus_expression_atom
                      (unary_minus_negation_symbol)
                      (expression_atom
                        (number)))))
                (punctuation_semicolon))
              (if_statement_end_keyword))))
        (case_statement
          (case_statement_case_keyword)
          (case_expression
            (to_statement
              (expression_atom
                (number))
              (to_statement_to_keyword)
              (expression_atom
                (number))))
          (punctuation_comma)
          (case_expression
            (to_statement
              (expression_atom
                (number))
              (to_statement_to_keyword)
              (expression_atom
                (number))))
          (punctuation_comma)
          (case_expression
            (expression_atom
              (number)))
          (punctuation_comma)
          (case_expression
            (expression_atom
              (number)))
          (punctuation_comma)
          (case_expression
            (select_case_conditional_expression
              (select_case_is_keyword)
              (operators_used_in_conditionals
                (relational_operators))
              (conditional_expression
                (conditional_atom
                  (expression_atom
                    (identifier)))))))
        (case_else_statement
          (case_statement_case_else_keyword)
          (statement
            (if_statement
              (if_statement_if_keyword)
              (conditional_expression
                (conditional_atom
                  (expression_atom
                    (function_call
                      (identifier)
                      (punctuation_bracket_open)
                      (expression_
                        (expression
                          (expression_
                            (expression_atom
                              (identifier)))
                          (operators_used_in_statements
                            (mathematical_operators))
                          (expression_
                            (expression_atom
                              (number)))))
                      (punctuation_comma)
                      (expression_
                        (expression_atom
                          (identifier)))
                      (punctuation_bracket_close)))))
              (if_statement_then_keyword)
              (return_statment
                (return_keyword)
                (expression_
                  (expression_atom
                    (unary_minus_expression_atom
                      (unary_minus_negation_symbol)
                      (expression_atom
                        (number)))))
                (punctuation_semicolon))
              (comment)
              (if_statement_else_keyword)
              (return_statment
                (return_keyword)
                (expression_
                  (expression_atom
                    (function_call
                      (identifier)
                      (punctuation_bracket_open)
                      (expression_
                        (expression_atom
                          (identifier)))
                      (punctuation_comma)
                      (expression_
                        (expression_atom
                          (function_call
                            (identifier)
                            (punctuation_bracket_open)
                            (expression_
                              (expression_atom
                                (identifier)))
                            (punctuation_bracket_close))))
                      (punctuation_comma)
                      (expression_
                        (expression_atom
                          (identifier)))
                      (punctuation_bracket_close))))
                (punctuation_semicolon))
              (if_statement_end_keyword))))
        (select_case_end_select_keyword)))
    (statement
      (for_loop
        (for_loop_for_keyword)
        (for_loop_iterable
          (identifier)
          (assign_to_value
            (punctuation_equals_sign)
            (expression_
              (expression_atom
                (number))))
          (to_statement_to_keyword)
          (expression_
            (expression_atom
              (number))))
        (for_loop_do_keyword)
        (statement
          (statement_function_call
            (function_call
              (identifier)
              (punctuation_bracket_open)
              (expression_
                (expression_atom
                  (array_variable
                    (identifier)
                    (array_brackets_index
                      (expression_atom
                        (identifier))))))
              (punctuation_bracket_close))
            (punctuation_semicolon)))
        (statement
          (statement_function_call
            (function_call
              (identifier)
              (punctuation_bracket_open)
              (expression_
                (expression_atom
                  (identifier)))
              (punctuation_bracket_close))
            (punctuation_semicolon)))
        (statement
          (statement_function_call
            (function_call
              (identifier)
              (punctuation_bracket_open)
              (expression_
                (expression_atom
                  (number)))
              (punctuation_bracket_close))
            (punctuation_semicolon)))
        (for_loop_end_keyword)))
    (statement
      (while_loop
        (while_loop_while_keyword)
        (conditional_expression
          (conditional_expression
            (conditional_atom
              (expression_atom
                (identifier))))
          (operators_used_in_conditionals
            (relational_operators))
          (conditional_expression
            (conditional_atom
              (expression_atom
                (number)))))
        (while_loop_do_keyword)
        (statement
          (statement_function_call
            (function_call
              (identifier)
              (punctuation_bracket_open)
              (expression_
                (expression_atom
                  (array_variable
                    (identifier)
                    (array_brackets_index
                      (expression_atom
                        (identifier))))))
              (punctuation_bracket_close))
            (punctuation_semicolon)))
        (while_loop_end_keyword)))
    (function_end)))
