test/corpus/functioncalls.txt
===================
Simple Function Call
===================
FUNCTION SimpleCall()
    CallMe();
END

---

(source_file
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (statement
      (statement_function_call
        (function_call
          (identifier)
          (punctuation_bracket_open)
          (punctuation_bracket_close))
        (punctuation_semicolon)))
    (function_end)))

===================
Function Call With Arguments
===================
FUNCTION CallArgs()
    DoThing(1, "Boat");
END

---

(source_file
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (statement
      (statement_function_call
        (function_call
          (identifier)
          (punctuation_bracket_open)
          (expression_
            (expression_atom
              (number)))
          (punctuation_comma)
          (expression_
            (expression_atom
              (string
                (punctuation_quotation_mark)
                (string_contents)
                (punctuation_quotation_mark))))
          (punctuation_bracket_close))
        (punctuation_semicolon)))
    (function_end)))

===================
Nested Function Calls
===================
FUNCTION NestedCalls()
    MapValueSet(A, IntToStr(B), "X");
END

---

(source_file
  (a_function
    (function_definition
      (function_keyword)
      (identifier)
      (punctuation_bracket_open)
      (punctuation_bracket_close))
    (statement
      (statement_function_call
        (function_call
          (identifier)
          (punctuation_bracket_open)
          (expression_
            (expression_atom
              (identifier)))
          (punctuation_comma)
          (expression_
            (expression_atom
              (function_call
                (identifier)
                (punctuation_bracket_open)
                (expression_
                  (expression_atom
                    (identifier)))
                (punctuation_bracket_close))))
          (punctuation_comma)
          (expression_
            (expression_atom
              (string
                (punctuation_quotation_mark)
                (string_contents)
                (punctuation_quotation_mark))))
          (punctuation_bracket_close))
        (punctuation_semicolon)))
    (function_end)))
